--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -8,11 +8,18 @@
     <div class="logo">
       <h4>NICHE MARKET PLACE</h4>
     </div>
-    <ul class="nav-links">
+      <div class="search-input">
+        <li><input type="text" placeholder="Search"></li>
+        <div class="autocom-box">
+          <li>Baseball cards</li>
+          <li>soccer balls</li>
+          <li>Air Jordans</li>
+        </div>
+      </div>
+      <ul class="nav-links">
       <li><a href='#'>Home</a></li>
       <li><a href='#'>Account</a></li>
       <li><a href='#'>Sign out</a></li>
-      <li><input type="text" placeholder="Search"></li>
     </ul>
     <div class="burger">
       <div class="line1"></div>
