changed the css for the hover and opacity

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -8,15 +8,15 @@
     <div class="logo">
       <h4>NICHE MARKET PLACE</h4>
     </div>
-      <div class="search-input">
-        <li><input type="text" placeholder="Search"></li>
-        <div class="autocom-box">
-          <li>Baseball cards</li>
-          <li>soccer balls</li>
-          <li>Air Jordans</li>
-        </div>
+    <div class="search-input">
+      <li><input type="text" placeholder="Search"></li>
+      <div class="autocom-box">
+        <li>Place Holder</li>
+        <li>shoes</li>
+        <li>Pokemon</li>
       </div>
-      <ul class="nav-links">
+    </div>
+    <ul class="nav-links">
       <li><a href='#'>Home</a></li>
       <li><a href='#'>Account</a></li>
       <li><a href='#'>Sign out</a></li>
