--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -80,7 +80,7 @@ nav {
   background: whitesmoke;
   list-style: none;
   width: 35%;
-  border-radius: 10px;
+  border-radius: 25px;
   box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.1);
 }
 .search-input input {
@@ -88,26 +88,33 @@ nav {
   width: 100%;
   outline: none;
   border: none;
-  border-radius: 10px;
+  border-radius: 100vh;
   padding: 0 1px 0 18px;
   font-size: 18px;
 
   box-shadow: 0px 1px 3px 2px rgba(0, 0, 0, 0.2);
 }
 .search-input .autocom-box {
-  /* padding: 10px 8px; */
+  padding: 5px 10px 20px;
   max-height: 280px;
   overflow-y: auto;
-  opacity: 0;
-  pointer-events: none;
+  opacity: 55%;
+  /* pointer-events: none; */
+}
+.search-input .autocom-box:hover {
+  opacity: 100%;
 }
 .autocom-box li {
   padding: 8px 12px;
   width: 100%;
   cursor: default;
   border-radius: 3px;
-  display: none;
+  color: #4d1c2f;
+
+  /* display: none; */
 }
 .autocom-box li:hover {
-  background: lightgray;
+  background: lightgrey;
+  border-radius: 100vh;
+  opacity: 100%;
 }
