5 files modified, 1 added, 1 deleted

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,5 +1,15 @@
-<div class="container">
-  <div class="front">
-    <img src="" alt="">
+<body>
+  <div class="container">
+    <h2 class="header-section"><span>Top Picks From Us</span></h2>
+    <div class="img-section">
+      <img src="https://wiki.tripwireinteractive.com/images/4/47/Placeholder.png"alt="">
+      <h3 class="item-name"><span>place holder</span></h3>
+    </div>
+    <img src="https://wiki.tripwireinteractive.com/images/4/47/Placeholder.png"alt="">
   </div>
-</div>
+  <div class="itemHeader">
+
+    <h3 class="item-name"><span>place holder</span></h3>
+  </div>
+  </div>
+</body>
