--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Arial, sans-serif;
   min-height: 50vh;
@@ -6,44 +5,90 @@ body {
   display: flex;
   place-items: center;
   color: #444;
-  background: rgba(196, 192, 192, 0.295);
+  background: rgba(238, 233, 233, 0.295);
+}
+img {
+  max-width: 100%;
 }
 .header-section {
-  position: absolute;
-  bottom: 10em;
-  right: 1.2em;
   font-weight: 400;
   font-size: 23px;
   padding: 0.76em 0.5em 0.76em;
-  background: rgba(136, 161, 158, 0.24);
-
-  clip-path: polygon(
-    20% 0%,
-    80% 0%,
-    100% 20%,
-    100% 80%,
-    80% 100%,
-    20% 100%,
-    0% 80%,
-    0% 20%
-  );
-}
-.item-name {
-  font-weight: 400;
-  margin: 0.75em 0;
-  display: flex;
+  border-radius: 10%;
+  background: rgba(227, 236, 235, 0.411);
+  clip-path: polygon(100% 0%, 83% 49%, 100% 100%, 0 100%, 0% 50%, 0 0);
 }
 .container {
   width: 15.5em;
   position: relative;
 }
-img {
-  max-width: 75%;
-}
-.img-section {
- display: inline-flex;
-gap:25px
-}
-.itemHeader{
+.item {
+  position: relative;
   display: flex;
+  gap: 25px;
+  padding: 5px;
+  margin: 5px;
+}
+.itemImages {
+  display: flex;
+  text-align: center;
+}
+
+.itemImages img {
+  border-radius: 25%;
+}
+.icon {
+  display: inline-block;
+  height: 10em;
+  width: 12em;
+  position: relative;
+  transition: transform ease-in-out 250ms;
+}
+.icon::before,
+.icon::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  border-radius: 25%;
+}
+.icon:hover::before {
+  content: "View Item";
+  cursor: pointer;
+  color: rgb(0, 164, 216);
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+  background-color: grey;
+  opacity: 35%;
+  display: grid;
+  place-items: center;
+  font-size: 1em;
+  z-index: 10;
+  transition: background-color 100ms linear;
+}
+.icon:hover::before {
+  background: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+}
+.item:hover .icon {
+  transform: translateY(20%) scale(1.05);
+}
+.item .icon:hover {
+  transform: translateY(-20%) scale(1.05);
+}
+.icon:hover::after {
+  background: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+  z-index: 1;
+  animation: pulse 1750ms infinite;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(0.96);
+    opacity: 85%;
+  }
+  100% {
+    transform: scale(1.35);
+    opacity: 35%;
+  }
 }
