--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,15 +1,14 @@
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet">
 <body>
   <div class="container">
     <h2 class="header-section"><span>Top Picks From Us</span></h2>
-    <div class="img-section">
-      <img src="https://wiki.tripwireinteractive.com/images/4/47/Placeholder.png"alt="">
-      <h3 class="item-name"><span>place holder</span></h3>
+    <div class="itemImages">
+      <div class="item">
+        <div class="icon"><img src="https://wiki.tripwireinteractive.com/images/4/47/Placeholder.png"alt=""></div>
+        <div class="icon"><img src="https://wiki.tripwireinteractive.com/images/4/47/Placeholder.png"alt=""></div>
+        <div class="icon"><img src="https://wiki.tripwireinteractive.com/images/4/47/Placeholder.png"alt=""></div>
+      </div>
     </div>
-    <img src="https://wiki.tripwireinteractive.com/images/4/47/Placeholder.png"alt="">
-  </div>
-  <div class="itemHeader">
-
-    <h3 class="item-name"><span>place holder</span></h3>
-  </div>
   </div>
 </body>
