--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -19,7 +19,7 @@
     <ul class="nav-links">
       <li><a href='#'>Home</a></li>
       <li><a href='#'>Account</a></li>
-      <li><a href='#'>Sign out</a></li>
+      <li><a (click)="onSignout()">Sign out</a></li>
     </ul>
     <div class="burger">
       <div class="line1"></div>
